--- a/demo/index.html
+++ b/demo/index.html
@@ -28,9 +28,9 @@
     </style>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular-messages.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular-animate.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular-aria.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular-messages.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular-animate.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular-aria.min.js"></script>
     <script src="../mdt-password-strength.js"></script>
     <script>
         var app = angular.module('MyApp', ['ngMaterial','ngMessages','ngAnimate','ngAria','mdtPasswordStrength']);
